# cosmic_text_py

./: Cargo.toml  pyproject.toml
cosmic_text_py/: __init__.py  cosmic_text_py.pyi  lib.py
src/: canvas.rs  drawing.rs  font.rs  lib.rs  objects.rs  paint.rs
src/internal/: drawing.rs  mod.rs  paint.rs  utils.rs
