[package]
name = "cosmic_text_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cosmic_text_py"
crate-type = ["cdylib"]

[dependencies]
cosmic-text = "0.11.0"
image = "0.24.8"
tiny-skia = "0.11.4"

pyo3 = "0.20.0"
