[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "cosmic_text_py"
requires-python = ">=3.8"
version = "0.1.3"
authors = [
    { name = "Kurbanov Bulat", email = "kurbanovbul@gmail.com" },
]
license-files.paths = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
